fixed header alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -42,10 +42,14 @@ $YouTube: hsl(348, 97%, 39%);
 .main {
   z-index: 1;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
   padding: 2rem;
+  width: 100%;
 
   .heading {
     h2 {
@@ -128,6 +132,7 @@ $YouTube: hsl(348, 97%, 39%);
 
 @media (min-width: 768px) {
   .header {
+    width: 90%;
     display: flex;
     justify-content: space-between;
     .heading {
